System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: AMD Mobility Radeon HD 5000 Series ATI Technologies Inc. 4.5.13399 Core Profile Context 15.200.1062.1004
Blender Version
Broken: version: 2.90 (sub 4), branch: master, commit date: 2020-05-28 18:34, hash: rB2deb6c517787
Worked: (newest version of Blender that worked as expected)
Short description of error
Enabling initial velocity seems to fix the problem.
Simple scene, some obstacles, an inflow item (sphere)
With non-alterated gravity force, 0 force field in the scene, the flow seems to go on the left.
Activating the flow initial velocity, it goes straight down (as expected)
Initial velocity non activated
Initial velocity activated
Exact steps for others to reproduce the error
Just try to activate and deactivate the initial velocity in the inflow object (sphere)